--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,10 +18,15 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+discord-rich-presence = "0.2.5"
+tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
 tokio = { version = "1.0", features = ["full"] }
 base64 = "0.21"
+log = "0.4"
+env_logger = "0.10"
+regex = "1.11.1"
+lazy_static = "1.5.0"
