--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nationstage",
-  "version": "0.2.5",
+  "version": "0.3.5",
   "description": "",
   "type": "module",
   "scripts": {
@@ -21,11 +21,14 @@
     "@bbob/preset-html5": "^4.2.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2.2.4",
+    "@types/he": "^1.2.3",
     "bbcode-parser": "^1.0.10",
     "bbcode-ts": "^1.0.4",
+    "bulletin-board-code": "^1.0.2",
     "chart.js": "^4.4.7",
     "fast-xml-parser": "^4.5.1",
-    "svelte-chartjs": "^3.1.5"
+    "he": "^1.2.0",
+    "html-entities": "^2.5.2"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
