--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "nationstage"
-version = "0.1.0"
+version = "0.3.6"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["echolotl"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -27,6 +27,7 @@ reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
 tokio = { version = "1.0", features = ["full"] }
 base64 = "0.21"
 log = "0.4"
+window-vibrancy = "0.5.2"
 env_logger = "0.10"
 regex = "1.11.1"
 lazy_static = "1.5.0"
