--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,11 +23,14 @@ tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
-tokio = { version = "1.0", features = ["full"] }
+reqwest = { version = "0.11", features = ["json", "stream"] }
+tokio = { version = "1", features = ["full"] }
 base64 = "0.21"
 log = "0.4"
 window-vibrancy = "0.5.2"
 env_logger = "0.10"
 regex = "1.11.1"
 lazy_static = "1.5.0"
+futures-util = "0.3"
+indicatif = "0.17"
+flate2 = "1.0"
